--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>homework1</title>
 </head>
+
 <body>
+  <!--шапка-->
+    <header>
+      <a href="./index.html"> <span>Web</span>Studio </a>
+        <nav>
+          <ul>
+          <li>
+            <a href="./index.html">Студия</a>
+          </li>
+          <li>
+            <a href="./portfolio.index.html" target="_blank">Портфолио</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+          </ul>
+        </nav>
+          <ul>
+            <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+
+
+    </header>
      
     
 </body>
