--- a/index.html
+++ b/index.html
@@ -31,10 +31,99 @@
             <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
-
-
     </header>
-     
-    
+
+     <!--main  -->
+    <main>
+      <!-- Герой 🦸 -->
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
+      <!-- Особенности  -->
+      <section>
+        <h2 hidden>Особенности</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+              <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+              <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+              <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+              <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Чем мы занимаемся -->
+      <section>
+        <h2>Чем мы занимаемся</h2>  
+          <ul>
+            <li>
+              <img src="./images/main/photo-1.jpg" alt="печатает на клавиатуре"
+               width="370" height="294">
+            </li>
+
+            <li>
+              <img src="./images/main/photo-2.jpg" alt="работает с телефона и ноутбука"
+               width="370" height="294">
+            </li> 
+
+           <li>
+             <img src="./images/main/photo-3.jpg" alt="работает на планшете"
+            width="370" height="294">
+           </li>
+        </ul>
+      </section>
+
+      <!--Наша команда  -->
+      <section>
+        <h2>Наша команда</h2>
+          <ul>
+            <li>
+              <img src="./images/main/product-designer.jpg" alt="фото работника" 
+              width="270" height="368">
+                <h3>Игорь Демьяненко</h3>
+                  <p lang="en">Product Designer</p>
+            </li>
+
+            <li>
+              <img src="./images/main/frontend-developer.jpg" alt="фото работника" 
+              width="270" height="368">
+                <h3>Ольга Репина</h3>
+                  <p lang="en">Frontend Developer</p>
+            </li>
+
+            <li>
+              <img src="./images/main/marketing.jpg" alt="фото работника" width="270" 
+              height="368">
+                <h3>Николай Тарасов</h3>
+                  <p lang="en">Marketing</p>
+
+            </li>
+              <li><img src="./images/main/ui-designer.jpg" alt="фото работника" 
+                width="270" height="368">
+                <h3>Михаил Ермаков</h3>
+                  <p lang="en">UI Designer</p>
+            </li>
+          </ul>
+      </section>
+    </main>
+
+    <!-- Подвал -->
+    <footer>
+
+
+
+
+    </footer>
 </body>
 </html>
