--- a/index.html
+++ b/index.html
@@ -120,10 +120,21 @@
 
     <!-- Подвал -->
     <footer>
-
-
-
-
+      <a href="./index.html"> <span>Web</span>Studio </a>
+        <address>
+          <ul>
+            <li>
+              <a href="https://goo.gl/maps/v3JvzRmvfpm3qLfx8" target="_blank">
+                г. Киев, пр-т Леси Украинки, 26</a>
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul> 
+        </address>
     </footer>
 </body>
 </html>
