--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homework1</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
             <a href="./index.html">Студия</a>
           </li>
           <li>
-            <a href="./portfolio.index.html" target="_blank">Портфолио</a>
+            <a href="./portfolio.html" target="_blank">Портфолио</a>
           </li>
           <li>
             <a href="#">Контакты</a>
@@ -133,7 +134,7 @@
             <li>
               <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
-        </ul> 
+          </ul>
         </address>
     </footer>
 </body>
